gup-us/gup-us-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: gup-us-uc-fe-clusterip
  namespace: gup-us
  labels:
    app: gup-us-uc-fe-clusterip
spec:
  selector:
    app: gup-us-uc-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gup-us-uc-api-clusterip
  namespace: gup-us
  labels:
    app: gup-us-uc-api-clusterip
spec:
  selector:
    app: gup-us-uc-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gup-us-seg-fe-clusterip
  namespace: gup-us
  labels:
    app: gup-us-seg-fe-clusterip
spec:
  selector:
    app: gup-us-seg-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
