gup-us/intlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: gup-us-uc-fe-intlb
  namespace: gup-us
  labels:
    app: gup-us-uc-fe-intlb
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  selector:
    app: gup-us-uc-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  loadBalancerIP: 10.240.160.14
  type: LoadBalancer
  sessionAffinity: ClientIP
---
apiVersion: v1
kind: Service
metadata:
  name: gup-us-uc-api-intlb
  namespace: gup-us
  labels:
    app: gup-us-uc-api-intlb
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  selector:
    app: gup-us-uc-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  loadBalancerIP: 10.240.160.15
  type: LoadBalancer
  sessionAffinity: ClientIP
---
apiVersion: v1
kind: Service
metadata:
  name: gup-us-seg-fe-intlb
  namespace: gup-us
  labels:
    app: gup-us-seg-fe-intlb
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  selector:
    app: gup-us-seg-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  loadBalancerIP: 10.240.160.16
  type: LoadBalancer
  sessionAffinity: ClientIP
